# BayesGenotyper

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  design.dot
src/: BayesPosteriorGenotyper.cc  BayesPosteriorGenotyper.h  Genotyper.cc  Genotyper.h  IAlleleAlphabet.h  IEvidence.h  IGenotypeList.h  IGenotyper.h  IObservation.h  IlluminaObservation.cc  IlluminaObservation.h  Makefile.am  Makefile.in  PloidyMultisetGenotypeList.cc  PloidyMultisetGenotypeList.h  SamtoolsPileupEvidence.cc  SamtoolsPileupEvidence.h  SingleNtAlleleAlphabet.cc  SingleNtAlleleAlphabet.h
test/: Makefile.am  Makefile.in  testBayesPosteriorGenotyper.cc  testIlluminaObservation.cc  testPloidyMultisetGenotypeList.cc  testSamtoolsPileupEvidence.cc  testSingleNtAlleleAlphabet.cc  testSingleSample.cc
