GSL_CPPFLAGS = @GSL_CPPFLAGS@
AM_CPPFLAGS = ${GSL_CPPFLAGS}
lib_LTLIBRARIES = libyi_bayesgenotype.la

libyi_bayesgenotype_la_SOURCES = IAlleleAlphabet.h \
								 SingleNtAlleleAlphabet.h \
								 SingleNtAlleleAlphabet.cc \
								 IGenotypeList.h \
								 PloidyMultisetGenotypeList.h \
								 PloidyMultisetGenotypeList.cc \
								 IObservation.h \
								 IlluminaObservation.h \
								 IlluminaObservation.cc \
								 IEvidence.h \
								 SamtoolsPileupEvidence.h \
								 SamtoolsPileupEvidence.cc \
								 IGenotyper.h \
								 BayesPosteriorGenotyper.h \
								 BayesPosteriorGenotyper.cc \
								 Genotyper.h \
								 Genotyper.cc
